# tabriz-assembly

./: .env.ini  .gitignore  CHANGELOG.rst  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0608a1ab3607_fx_update_library_capacity_column_as_.py  07c590574c8d_library_card_costs_updated_to_str_.py  0a7c01faf9aa_add_identification_logic_for_first_set_.py  1ffa76760842_deck_crypt_cards_raw_grouping_as_str.py  25cd7e703ee6_adding_vtes_cards_set_tables.py  432c92870e3a_fix_accidentaly_removed_capacity_columns.py  5182ea0a606f_add_twda_tables.py  6d46f791da8b_adding_user_table.py  ca977c9dc0a7_add_tournament_deck_tables.py  cb06de418c1f_change_crypt_card_primary_key_to_id_.py  da86d1f0323e_fix_crypt_and_library_id_range_constraints.py  dc60f8c14be4_updating_sets_cards_relationship_now_.py
app/: main.py
app/config/: __init__.py  api.py  base.py  database.py  logging.py  security.py  tournament.py
app/core/: error_handler.py  exceptions.py
app/models/: __init__.py  base.py  enums.py  tournament.py  user.py  vtes.py
app/schemas/: auth.py  cards.py  sets.py  tournament.py  vtes.py
app/services/tournament_data/: fetcher.py  runner.py
app/services/twd_features/: __init__.py  constants.py  cross_features.py  crypt_features.py  deck_features.py  helpers.py
app/services/twda_import/: constants.py  fetcher.py  runner.py
app/services/vtes_data/: constants.py  fetcher.py  runner.py
notebooks/: .gitignore  01_data.html  01_data.ipynb  01_data_loading.ipynb  card_first_print.ipynb  helpers.py
notebooks/2026-06 First exploration/: 04_library.ipynb
reports/: .gitignore
scripts/: deck_features_sample.json  extract_features.py  import_files.py  import_tournaments.py  import_twda.py
